# pg-voice-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
environment/: docker-compose.yml
environment/postgres/: Dockerfile
patches/: deepgram@3.11.0.patch
scripts/: .base.sh  clean.sh  patch.py  reinit_env.sh
src/: _dev_environment.py  app.py  demo.py  dependencies.py  main.py
src/api/routes/: __init__.py  agency.py  conversation.py  demo.py  ws.py
src/app_types/: enums.py  exceptions.py
src/commands/: commands.py
src/configs/: constants.py  logger.py  settings.py
src/db/connection/: session.py
src/db/models/: __init__.py  agency.py  conversation.py  enums.py  lead.py
src/db/repositories/: base.py  conversation.py  lead.py
src/dependencies/: common.py  services_deps.py
src/prompts/: dev_instructions.txt  instructions.txt  instructions_blueprint.json
src/schema/: agency.py  client.py  conversation.py  lead.py  xano.py
src/services/: agency.py  base.py  func_tools.py  voice_service.py  xano.py
src/static/: style.css  syncscroll.js
src/templates/: demo.html
src/utils/: aiohttp_utils.py  deepgram_clients.py  prompt.py  speaker.py
